# 2D-Gravity-Simulation

./: .gitignore  2D N Body Simulation.py  README.md  REAL SOLAR SYSTEM HALF.py  main.py  pyproject.toml  ruff.toml  simple gravity TO SCALE.py
classes/: configMenu.py  object.py  pygameWindow.py  scrollableFrame.py  simulation.py
gravity-simulation/: __init__.py
gravity_simulation/: __init__.py
saves/: Busy Solar System.txt  Earth and Moon.txt  Earth and Sun.txt  Half Solar System.txt  Solar System.txt  earth_moon_sun.yaml  easy_yaml.yaml  galaxy.yaml  half_solar_system.yaml  jupiter.yaml  random.yaml  sample_yaml.yaml  solar_system.yaml
src/gravity_sim/: __init__.py  __main__.py  cli.py  config_loader.py  object.py  quadtree.py  random_factory.py  simulation.py  simulation_runner.py  stack.py  vector.py  window.py
src/gravity_simulation/: __main__.py
tests/: test_color.py  test_config.py  test_object.py  test_quad_tree.py  test_random_factory.py  test_vector.py  test_yaml_parser.py
